替换collect(Collectors.toList())为toList()